--- a/you-say!/you-say!/Storyboards/NewQuestion.storyboard
+++ b/you-say!/you-say!/Storyboards/NewQuestion.storyboard
@@ -116,16 +116,16 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="NCa-JE-Qyn">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="743"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoría" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecD-1m-WSy">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="743"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="207" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCk-NV-WxX">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="743"/>
+                                                <rect key="frame" x="207" y="0.0" width="207" height="30"/>
                                                 <state key="normal" title="Elige una categoría"/>
                                                 <connections>
                                                     <segue destination="JKv-ex-xrd" kind="show" identifier="categorySegue" id="Cu3-wg-2EQ"/>
@@ -134,7 +134,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="se9-Zj-RCb">
-                                        <rect key="frame" x="0.0" y="743" width="414" height="31"/>
+                                        <rect key="frame" x="0.0" y="30" width="414" height="31"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿Distancia máxima de respuestas?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARQ-f1-CDA">
                                                 <rect key="frame" x="0.0" y="0.0" width="365" height="31"/>
@@ -151,7 +151,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="RcE-OI-hAZ">
-                                        <rect key="frame" x="0.0" y="774" width="414" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="61" width="414" height="0.0"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 km" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zKQ-Rf-dVV">
                                                 <rect key="frame" x="0.0" y="0.0" width="46" height="0.0"/>
@@ -167,6 +167,12 @@
                                             </slider>
                                         </subviews>
                                     </stackView>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="2wq-1t-1QV">
+                                        <rect key="frame" x="0.0" y="61" width="414" height="713"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" spellCheckingType="yes" smartDashesType="yes" smartInsertDeleteType="yes" smartQuotesType="yes"/>
+                                    </textField>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -183,11 +189,12 @@
                         <viewLayoutGuide key="safeArea" id="2qd-ec-0ES"/>
                     </view>
                     <connections>
-                        <outlet property="categoryLabel" destination="ecD-1m-WSy" id="rm0-tc-bfd"/>
-                        <outlet property="distanceLabel" destination="zKQ-Rf-dVV" id="mz4-pN-UfI"/>
-                        <outlet property="distanceSlider" destination="yxj-lx-fEX" id="h4Y-iV-sIV"/>
-                        <outlet property="distanceStackView" destination="RcE-OI-hAZ" id="I4W-8a-IXB"/>
-                        <outlet property="distanceSwitch" destination="xL5-Lp-EvT" id="nUc-mC-4ge"/>
+                        <outlet property="labelCategory" destination="ecD-1m-WSy" id="rm0-tc-bfd"/>
+                        <outlet property="labelDistance" destination="zKQ-Rf-dVV" id="mz4-pN-UfI"/>
+                        <outlet property="sliderDistance" destination="yxj-lx-fEX" id="h4Y-iV-sIV"/>
+                        <outlet property="stackViewDistance" destination="RcE-OI-hAZ" id="I4W-8a-IXB"/>
+                        <outlet property="switchDistance" destination="xL5-Lp-EvT" id="nUc-mC-4ge"/>
+                        <outlet property="textFieldQuestion" destination="2wq-1t-1QV" id="hp2-mt-896"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cEK-Tx-pJF" userLabel="First Responder" sceneMemberID="firstResponder"/>
