--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -173,24 +173,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B5w-Id-Gkd">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" id="Gl0-ir-Wpq">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gl0-ir-Wpq" id="GU6-Dl-OrX">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="z8O-Jm-2BY" id="K67-1u-ecw"/>
-                                    <outlet property="delegate" destination="z8O-Jm-2BY" id="CK8-lM-gII"/>
-                                </connections>
-                            </tableView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FGW-ol-sai">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -209,16 +191,112 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B5w-Id-Gkd">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="270" id="Gl0-ir-Wpq" customClass="QuestionTableViewCell" customModule="you_say_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="270"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Gl0-ir-Wpq" id="GU6-Dl-OrX">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="269.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m79-KC-rPy">
+                                                    <rect key="frame" x="20" y="11" width="47" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-like" translatesAutoresizingMaskIntoConstraints="NO" id="fDb-dR-efu">
+                                                    <rect key="frame" x="20" y="234" width="24" height="24"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbp-Rd-QHv">
+                                                    <rect key="frame" x="52" y="235" width="38" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="report" translatesAutoresizingMaskIntoConstraints="NO" id="bm8-sV-cZ0">
+                                                    <rect key="frame" x="111" y="233" width="24" height="24"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONM-K4-phB">
+                                                    <rect key="frame" x="143" y="235" width="38" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="new-answer" translatesAutoresizingMaskIntoConstraints="NO" id="AZn-y8-c7a">
+                                                    <rect key="frame" x="296" y="234" width="24" height="24"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iF3-e1-CMP">
+                                                    <rect key="frame" x="330" y="234" width="38" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tema" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8x-g3-d1v">
+                                                    <rect key="frame" x="328" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contenido" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3V-PW-ehz">
+                                                    <rect key="frame" x="20" y="48" width="374" height="163"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="vbp-Rd-QHv" secondAttribute="bottom" constant="13.5" id="2IA-HP-rTw"/>
+                                                <constraint firstAttribute="bottom" secondItem="AZn-y8-c7a" secondAttribute="bottom" constant="11.5" id="2eG-kf-t0P"/>
+                                                <constraint firstItem="m79-KC-rPy" firstAttribute="leading" secondItem="GU6-Dl-OrX" secondAttribute="leading" constant="20" id="6Gy-MD-nVf"/>
+                                                <constraint firstAttribute="bottom" secondItem="ONM-K4-phB" secondAttribute="bottom" constant="13.5" id="6qf-Il-hJ8"/>
+                                                <constraint firstAttribute="trailing" secondItem="m3V-PW-ehz" secondAttribute="trailing" constant="20" id="79J-Hw-GrJ"/>
+                                                <constraint firstAttribute="bottom" secondItem="iF3-e1-CMP" secondAttribute="bottom" constant="14.5" id="9ct-Bp-L3k"/>
+                                                <constraint firstItem="AZn-y8-c7a" firstAttribute="leading" secondItem="bm8-sV-cZ0" secondAttribute="trailing" constant="161" id="DS4-1R-LE5"/>
+                                                <constraint firstAttribute="trailing" secondItem="E8x-g3-d1v" secondAttribute="trailing" constant="44" id="Hqd-Wo-bsJ"/>
+                                                <constraint firstItem="vbp-Rd-QHv" firstAttribute="leading" secondItem="fDb-dR-efu" secondAttribute="trailing" constant="8" id="JiD-dM-QdP"/>
+                                                <constraint firstItem="fDb-dR-efu" firstAttribute="leading" secondItem="GU6-Dl-OrX" secondAttribute="leading" constant="20" id="NyG-Pd-Q0D"/>
+                                                <constraint firstItem="ONM-K4-phB" firstAttribute="leading" secondItem="bm8-sV-cZ0" secondAttribute="trailing" constant="8" id="PXy-C7-RtH"/>
+                                                <constraint firstItem="m79-KC-rPy" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="11" id="UHe-IK-niA"/>
+                                                <constraint firstItem="iF3-e1-CMP" firstAttribute="leading" secondItem="AZn-y8-c7a" secondAttribute="trailing" constant="10" id="WJ2-Dr-So3"/>
+                                                <constraint firstItem="E8x-g3-d1v" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="11" id="aUE-t6-5ts"/>
+                                                <constraint firstAttribute="bottom" secondItem="m3V-PW-ehz" secondAttribute="bottom" constant="58.5" id="bCD-7u-Rol"/>
+                                                <constraint firstItem="m3V-PW-ehz" firstAttribute="top" secondItem="GU6-Dl-OrX" secondAttribute="top" constant="48" id="gxk-1V-Zwp"/>
+                                                <constraint firstItem="m3V-PW-ehz" firstAttribute="leading" secondItem="GU6-Dl-OrX" secondAttribute="leading" constant="20" id="mXO-NY-y3b"/>
+                                                <constraint firstAttribute="bottom" secondItem="fDb-dR-efu" secondAttribute="bottom" constant="11.5" id="tI9-Im-Gos"/>
+                                                <constraint firstAttribute="bottom" secondItem="bm8-sV-cZ0" secondAttribute="bottom" constant="12.5" id="xs8-m8-PJd"/>
+                                                <constraint firstItem="bm8-sV-cZ0" firstAttribute="leading" secondItem="fDb-dR-efu" secondAttribute="trailing" constant="67" id="yYb-up-1Ei"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageViewLike" destination="fDb-dR-efu" id="njM-Sp-Qf6"/>
+                                            <outlet property="labelCategory" destination="E8x-g3-d1v" id="kVn-ZR-0Lj"/>
+                                            <outlet property="labelContent" destination="m3V-PW-ehz" id="JEZ-B1-CNI"/>
+                                            <outlet property="labelDate" destination="m79-KC-rPy" id="qeA-Vk-ryb"/>
+                                            <outlet property="labelLike" destination="vbp-Rd-QHv" id="mda-Nc-Ike"/>
+                                            <outlet property="labelMessages" destination="iF3-e1-CMP" id="JTx-i5-tTu"/>
+                                            <outlet property="labelReport" destination="ONM-K4-phB" id="STY-Fq-CPS"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="z8O-Jm-2BY" id="K67-1u-ecw"/>
+                                    <outlet property="delegate" destination="z8O-Jm-2BY" id="CK8-lM-gII"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="FGW-ol-sai" firstAttribute="leading" secondItem="4Or-MM-caF" secondAttribute="leading" id="2GA-Xh-6Ue"/>
                             <constraint firstItem="B5w-Id-Gkd" firstAttribute="leading" secondItem="4Or-MM-caF" secondAttribute="leading" id="AE0-t0-pUJ"/>
                             <constraint firstItem="B5w-Id-Gkd" firstAttribute="bottom" secondItem="4Or-MM-caF" secondAttribute="bottom" id="Gxg-tR-JoM"/>
-                            <constraint firstItem="B5w-Id-Gkd" firstAttribute="top" secondItem="FGW-ol-sai" secondAttribute="bottom" id="IRy-cV-hZ1"/>
                             <constraint firstItem="B5w-Id-Gkd" firstAttribute="trailing" secondItem="4Or-MM-caF" secondAttribute="trailing" id="noL-CU-ZYV"/>
                             <constraint firstItem="FGW-ol-sai" firstAttribute="top" secondItem="4Or-MM-caF" secondAttribute="top" id="pTT-mw-uVG"/>
                             <constraint firstItem="FGW-ol-sai" firstAttribute="trailing" secondItem="4Or-MM-caF" secondAttribute="trailing" id="stl-C3-wP3"/>
+                            <constraint firstItem="B5w-Id-Gkd" firstAttribute="top" secondItem="FGW-ol-sai" secondAttribute="bottom" id="vAG-uS-pj9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4Or-MM-caF"/>
                     </view>
@@ -267,4 +345,9 @@
             <point key="canvasLocation" x="316" y="1256"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="new-answer" width="24" height="24"/>
+        <image name="no-like" width="24" height="24"/>
+        <image name="report" width="24" height="24"/>
+    </resources>
 </document>
